Started implemeint header styles

--- a/personal-website-web/src/styles/_index.scss
+++ b/personal-website-web/src/styles/_index.scss
@@ -1,4 +1,8 @@
 @import "app-styles";
+@import "flex-styles";
+@import "text-styles";
+@import "spacing-styles";
+@import "button-styles";
 
 @import "../pages/index";
 @import "../components/index";
