--- a/personal-website-web/src/styles/_spacing-styles.scss
+++ b/personal-website-web/src/styles/_spacing-styles.scss
@@ -7,6 +7,19 @@
    height: 100%;
 }
 
+// Position
+.absolute {
+   position: absolute;
+}
+
+.relative {
+   position: relative;
+}
+
+.fixed {
+   position: fixed;
+}
+
 
 // Padding
 .plr-1em {
