--- a/personal-website-web/src/components/header/_header.scss
+++ b/personal-website-web/src/components/header/_header.scss
@@ -9,7 +9,7 @@
       margin: 0.5em 0.5em;
 
       &.active {
-         border-bottom: 0.05em solid red;
+         border-bottom: 0.05em solid $primary;
       }
    }
 
@@ -19,6 +19,6 @@
    }
 
    .theme-toggle-container{
-      scale: 0.78;
+      scale: 0.70;
    }
 }
