--- a/personal-website-web/src/styles/_app-colours.scss
+++ b/personal-website-web/src/styles/_app-colours.scss
@@ -1,13 +1,13 @@
-$primary: #320876;
+$primary: #7528f0;
 $secondary: #0077B6;
 
-$body-light: #EDFAFD;
+$body-light: #f2f2f2;
 $body-dark: #1E2628;
 
 $text-dark: white;
 $text-light: black;
 
 :root{
-   --body-light: #EDFAFD;
+   --body-light: #f2f2f2;
    --body-dark: #1E2628;
 }
