--- a/personal-website-web/src/styles/_app-styles.scss
+++ b/personal-website-web/src/styles/_app-styles.scss
@@ -15,3 +15,10 @@ main {
    background-color: $body-dark;
    color: $text-dark;
 }
+
+.clean-link {
+   text-decoration: none;
+   color: inherit
+
+   
+}
